--- a/frontend.html
+++ b/frontend.html
@@ -80,7 +80,7 @@
 <p><span class="badge badge-light">Barcelona,</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/koldpartners/0d0d69c1-6853-446b-b69a-35455769705e'>Kold+Partners - Good Monday - Senior Frontend Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/koldpartners/0d0d69c1-6853-446b-b69a-35455769705e'>Kold+Partners - Good Monday - Senior Frontend Developer</a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -108,7 +108,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thinkhr/1b4f1e26-4f24-4015-9b18-08b0d55c64c4'>ThinkHR - Senior Manager, Front-End Engineering</a></h5> 
+<h5><a href='https://jobs.lever.co/thinkhr/1b4f1e26-4f24-4015-9b18-08b0d55c64c4'>ThinkHR - Senior Manager, Front-End Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -148,7 +148,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/behalf/8ec61523-1686-4e39-831a-8006e63bb17f'>Behalf - Senior Frontend Engineer - Core</a></h5> 
+<h5><a href='https://jobs.lever.co/behalf/8ec61523-1686-4e39-831a-8006e63bb17f'>Behalf - Senior Frontend Engineer - Core</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... ... you'll use the latest frontend technologies to create the best development 
 experience for our developers, you'll help to build awesome UX, you'll architect 
@@ -238,7 +238,7 @@ the?...</p>
 <p><span class="badge badge-light">Warsaw Warsaw, Poland</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/draftkings/e333aad5-4d11-49f0-9ac3-e26edb76d4e6'>DraftKings - Associate Front End Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/draftkings/e333aad5-4d11-49f0-9ac3-e26edb76d4e6'>DraftKings - Associate Front End Developer</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -246,7 +246,7 @@ the?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://miles.applytojob.com/apply/S0Y9dY9mS3/FrontEnd-Engineer'>Front-End Engineer - Miles Employment Group - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://miles.applytojob.com/apply/S0Y9dY9mS3/FrontEnd-Engineer'>Front-End Engineer - Miles Employment Group - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -286,7 +286,7 @@ the?...</p>
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LeikirWeb/743999684655933-developpeu-r-se-frontend-react-react-native-cdi'>Leikir Web D?veloppeu?r?se Frontend (React / React Native) - CDI | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LeikirWeb/743999684655933-developpeu-r-se-frontend-react-react-native-cdi'>Leikir Web D?veloppeu?r?se Frontend (React / React Native) - CDI | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -314,7 +314,7 @@ the?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/renttherunway/jobs/1784645'>Job Application for Front End Engineer at Rent the Runway</a></h5> 
+<h5><a href='https://boards.greenhouse.io/renttherunway/jobs/1784645'>Job Application for Front End Engineer at Rent the Runway</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... As a Senior Front End Engineer at Rent the Runway, you are someone who 
 prioritizes creativity and user experience alongside great code and curiosity.</p>
@@ -400,7 +400,7 @@ prioritizes creativity and user experience alongside great code and curiosity.</
 <p>Jul 15, 2019 ... Apply online for the job of Senior Front End Software Engineer (React/React 
 Native) at Self Lender.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gousto.workable.com/jobs/1078124'>Frontend Engineer - Apply online - Gousto - Jobs</a></h5> 
+<h5><a href='https://gousto.workable.com/jobs/1078124'>Frontend Engineer - Apply online - Gousto - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... Apply online for the job of Frontend Engineer at Gousto.</p>
 <hr/>
@@ -433,7 +433,7 @@ Native) at Self Lender.</p>
 <p>6 days ago ... Bridgemaker GmbH has a job opening for Frontend Developer (m/w/d) - uptodate 
 in Munich (published: 18.07.2019). Apply now or check the other available?...</p>
 <hr/>
-<h5><a href='https://visenze.workable.com/j/BDDFEAA653'>ViSenze - Artificial Intelligence for the Visual Web - Jobs: Front-end Engineer (Web) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://visenze.workable.com/j/BDDFEAA653'>ViSenze - Artificial Intelligence for the Visual Web - Jobs: Front-end Engineer (Web) - Apply online</a></h5> 
 <p><span class="badge badge-light">Singapore Singapore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
