--- a/machine.html
+++ b/machine.html
@@ -43,7 +43,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://so1.join.com/jobs/258010-machine-learning-engineer-m-f-x'>Job @ SO1 (Berlin): Machine Learning Engineer (m/f/x) | JOIN</a></h5> 
+<h5><a href='https://so1.join.com/jobs/258010-machine-learning-engineer-m-f-x'>Job @ SO1 (Berlin): Machine Learning Engineer (m/f/x) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -81,7 +81,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4318049002'>Job Application for Senior Backend Engineer, Machine Learning  at Globality, Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4318049002'>Job Application for Senior Backend Engineer, Machine Learning  at Globality, Inc.</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -103,7 +103,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ecovadis/743999692157449-senior-machine-learning-data-f-m-paris'>EcoVadis Senior Machine Learning Data (F/M) - Paris | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ecovadis/743999692157449-senior-machine-learning-data-f-m-paris'>EcoVadis Senior Machine Learning Data (F/M) - Paris | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris Paris</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -115,7 +115,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999692174993-machine-learning-ai-architect'>CapTech Consulting Machine Learning &amp; AI Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999692174993-machine-learning-ai-architect'>CapTech Consulting Machine Learning &amp; AI Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -164,7 +164,7 @@ team at Vimeo is building AI-driven tools to help anyone who wants to make a?...
 <p>1 day ago ... Description. Machine Learning / Artificial Intelligence Engineer. Are you ready for 
 a career change to somewhere where you can really make a difference,?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/centralway/job/oNrsafwA'>Numbrs Personal Finance AG Careers - Machine Learning Engineer ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/oNrsafwA'>Numbrs Personal Finance AG Careers - Machine Learning Engineer ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Numbrs engineers are innovators, problem-solvers, and hard-workers who are 
 building solutions in big data, mobile technology and much more. We look for?...</p>
@@ -203,7 +203,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/retailmenot/4ff9f34a-9d6e-4919-b84c-3e370b7fd53f'>RetailMeNot - Principal Software Engineer, Machine Learning</a></h5> 
+<h5><a href='https://jobs.lever.co/retailmenot/4ff9f34a-9d6e-4919-b84c-3e370b7fd53f'>RetailMeNot - Principal Software Engineer, Machine Learning</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -235,7 +235,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://codete.workable.com/j/7FB9A1FA62?viewed=true'>Codete - Jobs: Senior Machine Learning Engineer - Apply online</a></h5> 
+<h5><a href='https://codete.workable.com/j/7FB9A1FA62?viewed=true'>Codete - Jobs: Senior Machine Learning Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Apply online for the job of Senior Machine Learning Engineer at Codete.</p>
 <hr/>
@@ -284,7 +284,7 @@ Prior strong expertise and experience in machine learning and data science?...</
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SmaatoInc/743999691792887-machine-learning-engineer-m-f-d-'>Smaato Inc. Machine Learning Engineer (m/f/d) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SmaatoInc/743999691792887-machine-learning-engineer-m-f-d-'>Smaato Inc. Machine Learning Engineer (m/f/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -383,7 +383,7 @@ passionate about having a positive impact on the world. You are enthusiastic?...
 <p>6 days ago ... Develop solutions using Machine Learning/Deep Learning and other advanced 
 technologies to solve a variety of problems; Translate user stories and business?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4341945002'>Job Application for Senior Machine Learning Infrastructure Engineer, Safety Product at Twitch</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twitch/jobs/4341945002'>Job Application for Senior Machine Learning Infrastructure Engineer, Safety Product at Twitch</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -425,7 +425,7 @@ Machine Learning. We are currently seeking a motivated human to join our team
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://rapidminer.workable.com/j/88EA6EA369'>RapidMiner - Jobs: Machine Learning Software Developer (Java) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rapidminer.workable.com/j/88EA6EA369'>RapidMiner - Jobs: Machine Learning Software Developer (Java) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -438,7 +438,7 @@ Machine Learning. We are currently seeking a motivated human to join our team
 <p>2 days ago ... We've created a cloud-connected people counter that works for retailers of all 
 sizes, and allows our customers to view and analyze their foot-traffic data. We're?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://externaltalent-mskcc.icims.com/jobs/21368/machine-learning-engineer/job'>Machine Learning Engineer in New York, New York | Careers at ...</a></h5> 
+<h5><a href='https://externaltalent-mskcc.icims.com/jobs/21368/machine-learning-engineer/job'>Machine Learning Engineer in New York, New York | Careers at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 2, 2019 ... MSK Data Products is a multidisciplinary team of designers, software engineers 
 and data scientists working inside MSK. Our mission is to transform how?...</p>
@@ -455,7 +455,7 @@ and data scientists working inside MSK. Our mission is to transform how?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<h5><a href='https://libertexgroup.workable.com/j/5387283FD3'>Libertex Group - Jobs: Data Scientist (Machine Learning) (relocation to Montenegro) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://libertexgroup.workable.com/j/5387283FD3'>Libertex Group - Jobs: Data Scientist (Machine Learning) (relocation to Montenegro) - Apply online</a></h5> 
 <p><span class="badge badge-light">Riga, Latvia</span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
